@@ -1,7 +1,7 @@
 8f465d3ec1cba00a7d024a1964e74bb6d241f86a73c77d95d8ceb10d09c8f7b9  roms/CAT
 59f0502748af32e3096e026a95e77216179cccfe803a05803317414643e2fcec  roms/DEHEX
 d7967248be71937d4fa1f38319a5a8473a842b1f6806b977e5fb184565bde0a4  roms/forth
-b386b0e08250421a4d7eb14817b4c3359aef52d7773b3667bb1caaa933cbfe66  roms/lisp
+ab9b52c1557c044e912fe099f82a1a8f66f065d86e8840403f10a2a90b8e3f73  roms/lisp
 2b9727381aec15a504c0898189fbc2344209d8e04451e3fa5d743e08e38f64cf  roms/M0
 24a4d74eb2eb7a82e68335643855658b27b5a6c3b13db473539f3e08d6f26ceb  roms/SET
 0a427b14020354d1c785f5f900677e0059fce8f8d4456e9c19e5528cb17101eb  roms/stage0_monitor
