@@ -35,6 +35,7 @@ Added Low memory detection to stage2 FORTH and now exits gracefully
 Added Low memory detection to stage2 Lisp and now exists gracefully
 Improved ISA Notes about M0 and hex2 to help bootstrappers
 Added rain1's new user forth starting script, which is not actually required for bootstrapping but rather convenience
+Added Most primitive raw string support to stage2 lisp
 
 ** Changed
 Minor refactor of stage3 FORTH by reepa
